[project]
name = "gpig"
dynamic = ["version"]
description = "Gaussian decomposition inversion method to estimate phytoplankton pigment concentrations from PACE OCI remote sensing reflectance. Algorithm is called 'GPig'."
readme = "README.md"
authors = [
    { name = "Max Danenhower"},
    { name = "Charles Stern"},
    { name = "Ali Chase"}
]
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.24.1",
    "earthaccess>=0.14.0",
    "h5netcdf>=1.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "xarray>=2025.4.0",
    "numba>=0.59.1"
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
